--- a/directories/webinars/ngsi-ld-concise-payloads-and-merge-patch-operations.html
+++ b/directories/webinars/ngsi-ld-concise-payloads-and-merge-patch-operations.html
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "https://www.youtube.com/watch?v&#x3D;-XPGyM7K_kU",
+  "contentUrl": "https://www.youtube.com/watch?v=-XPGyM7K_kU",
   "embedUrl": "https://www.youtube.com/embed/-XPGyM7K_kU",
   "duration": "T40M0S",
   "encodingFormat": "video/mpeg",
