--- a/directories/webinars/ngsi-ld-concise-payloads-and-merge-patch-operations.html
+++ b/directories/webinars/ngsi-ld-concise-payloads-and-merge-patch-operations.html
@@ -126,7 +126,8 @@ body {
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
-              src="https://www.youtube.com/embed/-XPGyM7K_kU"> 
+        src="https://www.youtube.com/embed/-XPGyM7K_kU"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""> 
     </iframe>
   </div>
   <p>
