--- a/directories/webinars/ngsi-ld-concise-payloads-and-merge-patch-operations.html
+++ b/directories/webinars/ngsi-ld-concise-payloads-and-merge-patch-operations.html
@@ -122,7 +122,7 @@ body {
 </style>
 </head>
 <body>
-	<h1 class="heading">FIWARE Webinars: NGSI-LD Concise Payloads and Merge Patch Operations - Developers (Core Context)</h1>
+	<h1 class="heading">FIWARE Webinars: NGSI-LD Concise Payloads and Merge Patch Operations</h1>
   
   <div class="youtube-video-container">
     <iframe height="720" width="1280" 
